--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -173,21 +173,21 @@
 
             <!-- Conteúdo do dashboard, saldos, receitas, gastos, etc. -->
             <div class="saldos-content">
-                <div class="valores-card">
+                <div class="valores-card" id="saldoCard">
                     <div class="valores">
                         <h1>Saldo Atual ></h1>
                         <span>R$ 0,00</span>
                     </div>
                     <img src="img/saldo-icone.png" alt="Ícone de Saldo">
                 </div>
-                <div class="valores-card">
+                <div class="valores-card" id="receitaCard">
                     <div class="valores">
                         <h1>Receitas ></h1>
                         <span>R$ 0,00</span>
                     </div>
                     <img src="img/receita-icone.png" alt="Ícone de Receitas">
                 </div>
-                <div class="valores-card">
+                <div class="valores-card" id="despesaCard">
                     <div class="valores">
                         <h1>Despesas ></h1>
                         <span>R$ 0,00</span>
@@ -228,12 +228,12 @@
 
     <main>
         <div class="container mt-4">
-            <div class="chart-container">
+            <div class="chart-container" id="despesaereceitaCard">
                 <canvas id="despesaReceitaChart" width="400" height="400"></canvas>
             </div>
         </div>
     </main>
-<div class="planejamento-container2">
+<div class="planejamento-container2" id="planejamentoCard">
     <div class="orçamento">
         <p><strong>Orçamento Total:</strong> R$ 10.000 &nbsp;<strong>Restam:</strong> R$ 4.500 &nbsp; <strong>Previsto:</strong> R$ 5.500</p>
     </div>
