--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -6,57 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/gestan-icone.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/locale/pt-BR.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Link CSS -->
     <link rel="stylesheet" href="styles/cadastro.css">
     <title>Tela de Cadastro</title>
 </head>
 
 <body>
-     <!-- cabeçalho -->
+    <!-- cabeçalho -->
     <div class="logo">
         <img src="img/tentativa2.jpg" alt="logo">
     </div>
-     <!-- Imagem -->
+    <!-- Imagem -->
     <div class="container-cadas">
         <div class="img-box">
-           <img src="img/tentativa1.png" alt="Cara no banco">
+            <img src="img/tentativa1.png" alt="Cara no banco">
         </div>
-         <!-- Form Cadastro -->
+        <!-- Form Cadastro -->
         <div class="content-box">
             <div class="form-box">
                 <h2>Cadastrar</h2>
                 <div class="line"></div>
-                <form>
-                    <div class="input-box">
-                        <span>Nome</span>
-                        <input type="text" placeholder="Nome completo">
-                    </div>
-                    <div class="input-box">
-                        <span>E-mail</span>
-                        <input type="email" placeholder="@mail.com">
-                    </div>
+                <div class="input-box">
+                    <span>Nome</span>
+                    <input type="text" placeholder="Nome completo">
+                </div>
+                <div class="input-box">
+                    <span>E-mail</span>
+                    <input type="email" placeholder="@mail.com">
+                </div>
 
-                    <div class="input-box">
-                        <span>Senha</span>
-                        <input type="password" placeholder="******">
-                    </div>
+                <div class="input-box">
+                    <span>Senha</span>
+                    <input type="password" placeholder="******">
+                </div>
 
-                   <div class="input-box">
-                        <span>Confirmar Senha</span>
-                        <input type="password" placeholder="******">
-                    </div>
-                     <!-- Botão de cadastrar-->
-                    <div class="input-box">
-                        <input type="submit" value="Cadastrar">
-                    </div>
+                <!-- <div class="input-box">
+                    <span>Confirmar Senha</span>
+                    <input type="password" placeholder="******">
+                </div> -->
+                <!-- Botão de cadastrar-->
+                <div class="input-box">
+                    <input type="submit" id="submit_form" value="Cadastrar">
+                </div>
 
-                    <div class="input-box">
-                       <p>Já possui uma Conta? <a href="index.html">Entrar</a></p>
-                    </div>
-                </form>
+                <div class="input-box">
+                    <p>Já possui uma Conta? <a href="index.html">Entrar</a></p>
+                </div>
             </div>
         </div>
     </div>
 </body>
-
+<script src="script/cadastro.js"></script>
 </html>
