--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/gestan-icone.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -13,8 +14,10 @@
     <script src="https://code.jquery.com/ui/1.12.1/locale/pt-BR.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <!-- Link CSS -->
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/application.css">
     <title>Tela De Login</title>
 </head>
 
@@ -33,20 +36,20 @@
             <div class="form-box">
                 <h2>Login</h2>
                 <div class="line"></div>
-                <form action="dashboard.html">
+                <form>
                     <div class="input-box">
                         <span>E-mail</span>
-                        <input type="email" placeholder="@mail.com">
+                        <input type="email" id="email" placeholder="@mail.com" required>
                     </div>
 
                     <div class="input-box">
                         <span>Senha</span>
-                        <input type="password" placeholder="******">
+                        <input type="password" id="password" placeholder="******" required>
                     </div>
 
                     <div class="remember">
                         <label>
-                            <input type="checkbox"> Remember me
+                            <input type="checkbox"> Lembrar de mim
                         </label>
                         <a href="esqueceusenha.html">Esqueceu a Senha?</a>
                     </div>                    
@@ -62,6 +65,9 @@
             </div>
         </div>
     </div>
+<script src="script/index.js"></script>
+<script src="script/application.js"></script>
+
 </body>
 
 </html>
