--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,15 +36,17 @@
             <div class="form-box">
                 <h2>Login</h2>
                 <div class="line"></div>
-                <form>
+                <form action="dashboard.html">
                     <div class="input-box">
                         <span>E-mail</span>
-                        <input type="email" id="email" placeholder="@mail.com" required>
+                        <!-- COLOCAR REQUIRED -->
+                        <input type="email" id="email" placeholder="@mail.com">
                     </div>
 
                     <div class="input-box">
                         <span>Senha</span>
-                        <input type="password" id="password" placeholder="******" required>
+                        <!-- COLOCAR REQUIRED -->
+                        <input type="password" id="password" placeholder="******">
                     </div>
 
                     <div class="remember">
