--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -24,22 +24,22 @@
                 <img src="img/gestan-icone.png" alt="Ícone Gestan">
             </div>
             <div class="mais-icone">
-                <a href="#" data-bs-toggle="modal" data-bs-target="#addModal"><img src="img/mais.png" alt="Ícone Mais"></a>
+                <a href="#" data-bs-toggle="modal" data-bs-target="#addModal"><img class="img-hover" src="img/mais.png" alt="Ícone Mais"></a>
             </div>
             <div class="inicio-icone">
-                <a href="dashboard.html"><img src="img/inicio-icone azul.png" alt="Ícone Início"></a>
+                <a href="dashboard.html"><img class="img-hover" src="img/inicio-icone azul.png" alt="Ícone Início"></a>
             </div>
             <div class="contas-icone">
-                <a href="contas.html"><img src="img/contas-icone.png" alt="Ícone Contas"></a>
+                <a href="contas.html"><img class="img-hover" src="img/contas-icone.png" alt="Ícone Contas"></a>
             </div>
             <div class="transacao-icone">
-                <a href="historico-transacoes.html"><img src="img/transação.png" alt="Ícone transações"></a>
+                <a href="historico-transacoes.html"><img class="img-hover" src="img/transação.png" alt="Ícone transações"></a>
             </div>
             <div class="planejamento-icone">
-                <a href="metas.html"><img src="img/planejamento-icone.png" alt="Ícone Planejamento"></a>
+                <a href="metas.html"><img class="img-hover" src="img/planejamento-icone.png" alt="Ícone Planejamento"></a>
             </div>
             <div class="relatorios-icone pagina-atual">
-                <a href="relatorios.html"><img src="img/relatorios-icone.png" alt="Ícone Relatórios"></a>
+                <a href="relatorios.html"><img class="img-hover" src="img/relatorios-icone.png" alt="Ícone Relatórios"></a>
             </div>
     
         </div>
