--- a/frontend/metas.html
+++ b/frontend/metas.html
@@ -27,23 +27,23 @@
             </div>
             <div class="mais-icone">
                 <a href="#" data-bs-toggle="modal" data-bs-target="#addModal">
-                    <img src="img/mais.png" alt="Ícone Mais">
+                    <img class="img-hover" src="img/mais.png" alt="Ícone Mais">
                 </a>
             </div>
             <div class="inicio-icone">
-                <a href="dashboard.html"><img src="img/inicio-icone.png" class="inicio-icone"></a>
+                <a href="dashboard.html"><img class="img-hover" src="img/inicio-icone.png" class="inicio-icone"></a>
             </div>
             <div class="contas-icone">
-                <a href="contas.html"><img src="img/contas-icone.png" ></a>
+                <a href="contas.html"><img class="img-hover" src="img/contas-icone.png" ></a>
             </div>
             <div class="transacao-icone">
-                <a href="historico-transacoes.html"><img src="img/transação.png" alt="Ícone transações"></a>
+                <a href="historico-transacoes.html"><img class="img-hover" src="img/transação.png" alt="Ícone transações"></a>
             </div>
             <div class="planejamento-icone">
-                <a href="metas.html"><img src="img/planejamento-icone azul.png"></a>
+                <a href="metas.html"><img class="img-hover" src="img/planejamento-icone azul.png"></a>
             </div>
             <div class="relatorios-icone pagina-atual">
-                <a href="relatorios.html"><img src="img/relatorios-icone.png"></a>
+                <a href="relatorios.html"><img class="img-hover" src="img/relatorios-icone.png"></a>
             </div>
     
         </div>
