--- a/frontend/metas.html
+++ b/frontend/metas.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/locale/pt-BR.js"></script>
@@ -147,6 +148,36 @@
                         <div class="mb-3">
                             <label for="valorMeta" class="form-label">Custo da Meta</label>
                             <input type="number" class="form-control" id="valorMeta" placeholder="Quanto custará?">
+                        </div>
+                        <div class="mb-3">
+                            <label for="corMeta" class="form-label">Escolha a Cor da Meta</label>
+                            <input type="color" class="form-control" id="corMeta" value="#d4d2d2" placeholder="Quanto custará?">
+                        </div>
+                        <div class="select-icons">
+                            <label>
+                                <input type="radio" name="icon" value="fa-plane" checked>
+                                <i class="fas fa-plane"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="icon" value="fa-heart">
+                                <i class="fas fa-heart"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="icon" value="fa-star">
+                                <i class="fas fa-star"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="icon" value="fa-user" checked>
+                                <i class="fas fa-user"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="icon" value="fa-heart">
+                                <i class="fas fa-heart"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="icon" value="fa-star">
+                                <i class="fas fa-star"></i>
+                            </label>
                         </div>
                         <div class="mb-3">
                             <label for="dataMeta" class="form-label">Quando ocorrerá?</label>
