Icone funciona e money mask nos inputs

--- a/frontend/metas.html
+++ b/frontend/metas.html
@@ -147,7 +147,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="valorMeta" class="form-label">Custo da Meta</label>
-                            <input type="number" class="form-control" id="valorMeta" placeholder="Quanto custará?">
+                            <input type="text" class="form-control moneyInput" id="valorMeta" placeholder="Quanto custará?">
                         </div>
                         <div class="mb-3">
                             <label for="corMeta" class="form-label">Escolha a Cor da Meta</label>
@@ -155,28 +155,28 @@
                         </div>
                         <div class="select-icons">
                             <label>
-                                <input type="radio" name="icon" value="fa-plane" checked>
+                                <input type="radio" name="iconMeta" value="fa-plane" checked>
                                 <i class="fas fa-plane"></i>
                             </label>
                             <label>
-                                <input type="radio" name="icon" value="fa-heart">
+                                <input type="radio" name="iconMeta" value="fa-house">
+                                <i class="fas fa-house"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="iconMeta" value="fa-car">
+                                <i class="fas fa-car"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="iconMeta" value="fa-book">
+                                <i class="fas fa-book"></i>
+                            </label>
+                            <label>
+                                <input type="radio" name="iconMeta" value="fa-heart">
                                 <i class="fas fa-heart"></i>
                             </label>
                             <label>
-                                <input type="radio" name="icon" value="fa-star">
-                                <i class="fas fa-star"></i>
-                            </label>
-                            <label>
-                                <input type="radio" name="icon" value="fa-user" checked>
-                                <i class="fas fa-user"></i>
-                            </label>
-                            <label>
-                                <input type="radio" name="icon" value="fa-heart">
-                                <i class="fas fa-heart"></i>
-                            </label>
-                            <label>
-                                <input type="radio" name="icon" value="fa-star">
-                                <i class="fas fa-star"></i>
+                                <input type="radio" name="iconMeta" value="fa-shopping-bag">
+                                <i class="fas fa-shopping-bag"></i>
                             </label>
                         </div>
                         <div class="mb-3">
@@ -209,7 +209,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="novoValorMeta" class="form-label">Alterar Custo da Meta</label>
-                        <input type="number" class="form-control" id="novoValorMeta" placeholder="Novo Valor">
+                        <input type="text" class="form-control moneyInput" id="novoValorMeta" placeholder="Novo Valor">
                     </div>
                     <div class="mb-3">
                         <label for="novaDataMeta" class="form-label">Nova Data</label>
